feat: split out pending and non-pending classification tasks
Splits out classification tasks that are pending versus those that are
not pending.
