# backend/storage/models.go
@@ -20,6 +20,22 @@ type Project struct {
 // LLMOutput is the output data generated by the classification task.
 // CreatedAt is the timestamp when the classification task was created.
 // Embedding is the binary representation of the task's embedding.
+type PendingClassificationTask struct {
+	ID        int64
+	ProjectID int64
+	LLMInput  string
+	LLMOutput string
+	CreatedAt time.Time
+	Embedding []byte
+}
+
+// ID is the unique identifier for the classification task.
+// ProjectID is the identifier for the project associated with the
+// classification task.
+// LLMInput is the input data for the classification task.
+// LLMOutput is the output data generated by the classification task.
+// CreatedAt is the timestamp when the classification task was created.
+// Embedding is the binary representation of the task's embedding.
 // LabelID is the identifier for the label associated with the classification task.
 type ClassificationTask struct {
 	ID        int64
@@ -28,7 +44,7 @@ type ClassificationTask struct {
 	LLMOutput string
 	CreatedAt time.Time
 	Embedding []byte
-	LabelID   *int64
+	LabelID   int64
 }
 
 // ID represents the unique identifier of the classification task label.
